[metadata]
name = weibo
summary = 'Climbed out of the weibo information for the specified user'
home-page = 'https://github.com/windskyer/weibo'
author = 'zwei'
author-email = 'suifeng20@hotmail.com
license = 'LGPL'
description-file =
    README.md
platform = ''
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
        weibo

data_files =
    etc/weibo =
        etc/weibo.conf
        etc/token.pkl

[entry_points]
console_scripts =
    weibo_api = weibo.cmd.weibo:amain
    weibo_pc = weibo.cmd.weibo:pmain

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
